Fix shoutouts messsages to be either public or private

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,7 @@
 
  @import"projects";
  @import"shoutouts";
+ @import"notes";
 
  html {
   height: 100%;
@@ -101,4 +102,9 @@
   .message-widget .active {
     color: orange;
   }
+
+  .bloc1, .bloc2 {
+    display:inline-block;
+    margin: 5px;
+ }
   
