--- a/app/assets/stylesheets/shoutouts.scss
+++ b/app/assets/stylesheets/shoutouts.scss
@@ -1,9 +1,86 @@
 // Place all the styles related to the shoutouts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ .chat-box{
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+ } 
 
-// #shoutout-body {
-//     max-height: 400px;
-//     overflow-y: auto;
-//     margin-bottom: 2em;
-// }
+ .chat{
+    width: 50%;
+    height: 80vh;
+    z-index: 2;
+    overflow: auto;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
+    background: #ffff00;
+    opacity: 05;
+    border-radius: 20px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    
+ }
+
+ ul li {
+    list-style: none;
+    align-items: flex-start;
+ } 
+ .shoutouts {
+    flex: 1 1 auto;
+    color: rgba(255, 255, 255, .5);
+    overflow: hidden;
+    // position: relative;
+    // width: 100%;
+    
+ }
+ 
+ .shoutout-body {
+    clear: both;
+    float: left;
+    padding: 6px 10px 7px;
+    border-radius: 10px 10px 10px 0;
+    background: rgba(0, 0, 0, .3);
+    margin: 8px 0;
+    font-size: 11px;
+    line-height: 1.4;
+    margin-left: 35px;
+    // position: relative;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
+    overflow-y: scroll
+ }
+
+//  .timestamp {
+//     position: absolute;
+//     bottom: -15px;
+//     font-size: 9px;
+//     color: rgba(255, 255, 255, .3);
+//   }
+
+.shoutout-personal {
+    float: right;
+    color: #fff;
+    text-align: right;
+    background: linear-gradient(120deg, #248A52, #257287);
+    border-radius: 10px 10px 0 10px;
+}
+
+.avatar-chat {
+    // position: absolute;
+    float: left;
+    z-index: 1;
+    bottom: -15px;
+    left: -35px;
+    border-radius: 30px;
+    width: 30px;
+    height: 30px;
+    // overflow: hidden;
+    margin: 0;
+    padding: 0;
+    border: 10px solid rgba(255, 255, 255, 0.24);
+}
+
+img {
+    width: 100%;
+    height: auto;
+  }
