--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,9 +38,64 @@
         <% end %>
   </div>
 
-
-
-
+<!-- Project Card Section -->
+    <div class="col s12 l6">
+        <form>
+        <%= form_tag projects_path, method: :get do %>
+            <%= text_field_tag :query, params[:query], class: 'form-control typeahead', id: "projects_search", placeholder: "Search a project" %>
+            <%= submit_tag 'Search', class: "btn" %>
+        <% end %>
+        </form>
+        <% @projects.each do |project| %> 
+        <section class="card-panel">
+            <% if project&.user&.photo.nil? %>
+            <span class="bloc1">
+                <img class="circle avatar-small" src="/assets/default-avatar.png">
+            </span>
+            <% else %>
+            <span class="">
+                <img class="circle avatar-small" src="<%= project&.user&.photo %>">
+            </span>
+            <% end %>
+            <span class="username">@<%= project&.user&.username %></span>
+            <div class="card pin">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator project-thumbnail" src="<%= project.thumbnail%>">
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4 title"><%= project.title %><i class="material-icons right">more_vert</i></span>
+                <div class="card-action">
+                <% if user_signed_in? %>
+                    <%= link_to project, class: "" do %>
+                    <span><i class="material-icons">forward</i></span>
+                    <% end %>
+                    <%= link_to edit_project_path(project), class: "" do %>
+                    <span><i class="material-icons">edit</i></span>
+                    <% end %>
+                    <%= link_to project, method: :delete, data: { confirm: 'Are you sure you want to delete this project?' } do %>
+                    <span><i class="material-icons">delete_sweep</i></span>
+                    <% end %>
+                <% else %>
+                    <%= link_to project, class: "" do %>
+                    <span><i class="material-icons">reply</i></span>
+                    <% end %>
+                    <%= link_to project, class: "" do %>
+                    <span><i class="material-icons">thumb_up</i></span>
+                    <% end %>
+                <% end %>
+                
+                </div>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><%= project.title %><i class="material-icons right">close</i></span>
+                <p><%= project.description %></p>
+            </div>
+            </div>
+        </section>
+        <% end %>
+    </div>
+    
+<!-- Shoutout Card Section -->
     <% if user_signed_in? %>
         <div class="col s12 m4 l3">
             <%= render 'shoutouts', users: @users %>
