--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_tree .
  *= require_self
  *= require chosen
+ *= require animate
  */
  
  
@@ -89,6 +90,11 @@
     height: 70px;
  }
 
+ img.avatar-shoutouts {
+  width: 120px;
+  height: 120px;
+ }
+
  img.logo {
     width: 55px;
     height: 55px;
@@ -107,4 +113,4 @@
     display:inline-block;
     margin: 5px;
  }
-  
+
