--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -46,15 +46,16 @@ img.project-thumbnail {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 90px;
   }
 
  .team-show p {
     margin: 0;
   }
 
- .section.teams {
+ .section.notes {
     margin-bottom: 100px;
+    margin-top: 80px;
   }
 
   
