Add ability to save images upload through Froala Editor to AWS Amazon

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -62,7 +62,8 @@
                 <span><i class="material-icons">delete_forever</i></span>
               <% end %>
             </div>
-            <div class="card-content white-text">
+            <div class="card-content white-text froala-view">
+              
               <span contenteditable="true"><%= note.body.html_safe %></span> <br />
             </div>
             <div class="note-user-avatar">
