--- a/app/assets/stylesheets/shoutouts.scss
+++ b/app/assets/stylesheets/shoutouts.scss
@@ -12,11 +12,12 @@
     height: 80vh;
     z-index: 2;
     overflow: auto;
-    box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
+    box-shadow: 0 5px 50px rgba(0, 0, 0, .2);
     background: #69f0ae;
     border-radius: 20px;
     display: flex;
     justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
  }
 
@@ -37,10 +38,10 @@
     clear: both;
     float: left;
     padding: 6px 10px 7px;
-    border-radius: 10px 10px 10px 0;
+    border-radius: 0 15px 15px 15px;
     background: rgba(0, 0, 0, .3);
-    margin: 8px 0;
-    font-size: 11px;
+    margin: 10px;
+    font-size: 12px;
     line-height: 1.4;
     margin-left: 35px;
     // position: relative;
@@ -49,21 +50,6 @@
     color: #fff;
     font-size: 1rem;
  }
-
-//  .timestamp {
-//     position: absolute;
-//     bottom: -15px;
-//     font-size: 9px;
-//     color: rgba(255, 255, 255, .3);
-//   }
-
-.shoutout-personal {
-    float: right;
-    color: #fff;
-    text-align: right;
-    background: linear-gradient(120deg, #248A52, #257287);
-    border-radius: 10px 10px 0 10px;
-}
 
 .avatar-chat {
     // position: absolute;
@@ -77,7 +63,6 @@
     // overflow: hidden;
     margin: 0;
     padding: 0;
-    border: 10px solid rgba(255, 255, 255, 0.24);
 }
 
 img {
