--- a/app/views/create_messages/index.html.erb
+++ b/app/views/create_messages/index.html.erb
@@ -17,20 +17,20 @@
                     <span class="shoutouts">
                         <span class="shoutout-body">
                             <%= message.body %>
+                            <% if message&.private? %>
+                                <%= link_to shoutout_create_message_path(@shoutout, message, {is_public: true}), class: "btn-floating btn-small green accent-2 btn-floating waves-effect waves-light", method: :patch do %>
+                                <span><i class="material-icons">remove_circle_outline</i></span>
+                                <% end %>
+                            <% else %>
+                                <%= link_to shoutout_create_message_path(@shoutout, message, {is_public: false}), class: "btn-floating btn-small green accent-2 waves-effect waves-light", method: :patch do %>
+                                <span><i class="material-icons">remove_circle</i></span>
+                                <% end %>
+                            <% end %>
+                            <%= link_to shoutout_create_message_path(message.shoutout, message), class: "btn-floating btn-small green accent-2 waves-effect waves-light", method: :delete, data: { id: message.id} do %>
+                                <span><i class="material-icons">delete_forever</i></span>
+                            <% end %>
+                            </span>
                         </span>
-                    </span>
-                    <% if message&.private? %>
-                        <%= link_to shoutout_create_message_path(@shoutout, message, {is_public: true}), method: :patch do %>
-                        <span><i class="material-icons">remove_circle_outline</i></span>
-                        <% end %>
-                    <% else %>
-                        <%= link_to shoutout_create_message_path(@shoutout, message, {is_public: false}), method: :patch do %>
-                        <span><i class="material-icons">remove_circle</i></span>
-                        <% end %>
-                    <% end %>
-                    <%= link_to shoutout_create_message_path(message.shoutout, message), class: "", method: :delete, data: { id: message.id} do %>
-                        <span><i class="material-icons">delete_forever</i></span>
-                    <% end %>
                     </span>
                 </li>
             </ul>               
@@ -46,7 +46,7 @@
         </div>
         <%= f.text_field :user_id, value: current_user.id, type: "hidden" %>
         <div>
-        <%= f.submit "Send Reply", class: "btn" %>
+        <%= f.submit "Send", class: "btn submit" %>
         </div>
         <% end %>
     </div>
